// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when selectedMode is different from mode 1`] = `
<label
  className="modeButton"
>
  <input
    className="input"
    defaultChecked={false}
    name="foo"
    type="radio"
    value="offer"
  />
  <div
    className="button offer"
  >
    <svg />
  </div>
</label>
`;

exports[`when selectedMode matches mode 1`] = `
<label
  className="modeButton"
>
  <input
    className="input"
    defaultChecked={true}
    name="foo"
    type="radio"
    value="offer"
  />
  <div
    className="button offer"
  >
    <svg />
  </div>
</label>
`;

exports[`without a selectedMode 1`] = `
<label
  className="modeButton"
>
  <input
    className="input"
    defaultChecked={false}
    name="foo"
    type="radio"
    value="request"
  />
  <div
    className="button request"
  >
    <svg />
  </div>
</label>
`;
